# AkurAI-DNS

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  akurai-deploy.toml  deploy.sh
scripts/: validate.sh
src/: dns.rs  main.rs  server.rs  zone.rs
zones/: golfsetridak.is.toml  olibuijr.com.toml
