[package]
name = "akurai-dns"
version = "0.1.0"
edition = "2024"
description = "Minimal authoritative DNS server in pure Rust"
license = "MIT"
repository = "https://github.com/olibuijr/akurai-dns"

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
